[package]
name = "git-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Web framework
actix-web = "4.4"
actix-files = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }

# SSH support
russh = "0.44"
russh-keys = "0.44"
async-trait = "0.1"

# Database
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
sea-orm-migration = "0.12"

# Password hashing
bcrypt = "0.15"

# Internal dependencies
git-protocol = { path = "../git-protocol" }
git-storage = { path = "../git-storage" }
